[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/spritesfer/fechar.png" type="Texture" id=1]
[ext_resource path="res://scenes/minigames/MinigameSpawner.gd" type="Script" id=2]
[ext_resource path="res://assets/Images/Notification_baloon.png" type="Texture" id=3]

[node name="MinigameSpawner" type="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 793.0
margin_top = -237.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.6586
margin_top = 105.953
margin_right = 15.3414
margin_bottom = 121.953
text = "You've got mail!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -106.0
margin_right = -79.0
margin_bottom = -20.0
text = "Minigame description here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="."]
margin_left = 262.26
margin_top = 102.586
margin_right = 326.26
margin_bottom = 166.586
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Timer" parent="."]
wait_time = 999999.0
one_shot = true
autostart = true

[node name="Begin" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="timeout" from="Next" to="." method="_on_Next_timeout"]
[connection signal="timeout" from="Begin" to="." method="_on_Begin_timeout"]
